--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,7 @@ dependencies {
     // Compose destinations
     implementation 'io.github.raamcosta.compose-destinations:core:1.5.1-beta'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.5.1-beta'
+
+    // Timber logging
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 }
