--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,16 @@ plugins {
     id 'com.google.dagger.hilt.android' version '2.41' apply false
 }
 
+allprojects {
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions {
+            freeCompilerArgs += [
+                    "-opt-in=androidx.compose.foundation.ExperimentalFoundationApi"
+            ]
+        }
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
