Added a branded font for the app name header.
Added typography and used it on texts.

Adjusted ui, added a topBar, created a preview.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,6 @@ dependencies {
 
     // Timber logging
     implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 }
