--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,5 +87,12 @@ dependencies {
     // Timber logging
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
+    // Material icons
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
+    // Paging
+    def paging_version = "3.1.1"
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    testImplementation "androidx.paging:paging-common:$paging_version"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha14"
 }
