--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
     id 'kotlin-kapt'
     id 'com.google.devtools.ksp' version "$kotlin_version-1.0.4"
     id 'dagger.hilt.android.plugin'
@@ -76,9 +77,14 @@ dependencies {
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
+
+    // Moshi null-safe
+    implementation 'com.github.sparklexin:moshi-kotlin-nullsafe:v1.0.0'
 
     // Compose destinations
     implementation 'io.github.raamcosta.compose-destinations:core:1.5.1-beta'
@@ -95,4 +101,7 @@ dependencies {
     implementation "androidx.paging:paging-runtime:$paging_version"
     testImplementation "androidx.paging:paging-common:$paging_version"
     implementation "androidx.paging:paging-compose:1.0.0-alpha14"
+
+    // kotlinx serialization
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 }
