--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,13 @@ dependencies {
 
     // kotlinx serialization
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
+
+    // Room
+    implementation "androidx.room:room-runtime:2.4.2"
+    implementation 'androidx.room:room-ktx:2.4.2'
+    annotationProcessor "androidx.room:room-compiler:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
+
+    // Datastore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
