Improved the layout of ArticleDetail:
  - Used landscapist glide to load images in ArticleDetail.
  - Added publishedAt.
  - Added a link at the bottom leading to the source article.
  - Added Author.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,4 +113,7 @@ dependencies {
 
     // Datastore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    // Landscapist glide
+    implementation "com.github.skydoves:landscapist-glide:1.5.1"
 }
