--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        compose_version = '1.1.1'
-        kotlin_version = '1.6.10'
+        compose_version = '1.2.0-alpha08'
+        kotlin_version = '1.6.20'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
