--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ allprojects {
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
         kotlinOptions {
             freeCompilerArgs += [
-                    "-opt-in=androidx.compose.foundation.ExperimentalFoundationApi"
+                    "-opt-in=androidx.compose.foundation.ExperimentalFoundationApi",
+                    "-opt-in=androidx.compose.ui.ExperimentalComposeUiApi"
             ]
         }
     }
