--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,10 +106,12 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 
     // Room
-    implementation "androidx.room:room-runtime:2.4.2"
-    implementation 'androidx.room:room-ktx:2.4.2'
-    annotationProcessor "androidx.room:room-compiler:2.4.2"
-    kapt "androidx.room:room-compiler:2.4.2"
+    def room_version = "2.4.2"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation("androidx.room:room-paging:$room_version")
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // Datastore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
