Added news feed button in the side menu.

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ allprojects {
         kotlinOptions {
             freeCompilerArgs += [
                     "-opt-in=androidx.compose.foundation.ExperimentalFoundationApi",
-                    "-opt-in=androidx.compose.ui.ExperimentalComposeUiApi"
+                    "-opt-in=androidx.compose.ui.ExperimentalComposeUiApi",
+                    "-opt-in=androidx.compose.material.ExperimentalMaterialApi"
             ]
         }
     }
